--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+
+@use "1-abstracts/variables";
+@use "1-abstracts/mixins";
+
+// @use "2-vendors/";
+
+@use "3-base/normalize";
+@use "3-base/reset";
+@use "3-base/typography";
+
+@use "4-layout/navigation";
+@use "4-layout/grid";
+@use "4-layout/header";
+@use "4-layout/footer";
+@use "4-layout/forms";
+
+@use "5-components/buttons";
+
+// @use "6-pages/";
