--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 @use "1-abstracts/variables";
 @use "1-abstracts/mixins";
 
-// @use "2-vendors/";
+@use "2-vendors/tailwind";
 
 @use "3-base/normalize";
 @use "3-base/reset";
